[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nbphy"
version = "0.1.0"
description = "python零依赖物理计算库"
authors = [
    {name = "tc0512", email = "tancheng_0812@qq.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/tc0512/nbphy"
